export class Ciudad {
    constructor(nombre, pais) {
        this.nombre    = nombre
        this.pais      = pais
    }
}   