export class Direccion {
    constructor({ calle, altura, ciudad, lat, long }) {
        this.altura    = altura
        this.calle     = calle
        this.ciudad    = ciudad
        this.lat       = lat
        this.long      = long
    }
   
}