export class Foto {

    constructor(descripcion, path) {
        this.descripcion   = descripcion
        this.path          = path
    }

}