export class Pais {
    constructor(nombre) {
        this.nombre = nombre
    }
}